@@ -6,8 +6,8 @@ HOMEPAGE=http://www.nagvis.org/
 IUSE=apache2 automap apache2
 KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=GPL-2
-RDEPEND=|| ( net-analyzer/nagios net-analyzer/icinga ) automap? ( >=media-gfx/graphviz-2.14 ) apache2? ( dev-lang/php[apache2] ) net-analyzer/mk-livestatus dev-lang/php[gd,nls,json,session,pdo,sqlite3,sockets,mysql,unicode,xml] virtual/httpd-php apache2? ( =www-servers/apache-2* )
+RDEPEND=|| ( net-analyzer/nagios net-analyzer/icinga ) automap? ( >=media-gfx/graphviz-2.14 ) apache2? ( dev-lang/php[apache2] ) net-analyzer/mk-livestatus dev-lang/php[gd,nls,json,session,pdo,sqlite,sockets,mysql,unicode,xml] virtual/httpd-php apache2? ( =www-servers/apache-2* )
 SLOT=0
 SRC_URI=mirror://sourceforge/nagvis/nagvis-1.6.6.tar.gz
 _eclasses_=confutils	2ab69b52fa6ea0c0669a47fb94b354b4	depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	depend.php	df169a364e191b840b695604097e3c21	eutils	b8fdb86895c268cca7ae1626264a30f4	multilib	892e597faee02a5b94eb02ab512e7622	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=286f910501cde7284af927e5b05b5049
+_md5_=d97a4b81552e987d80b4ab7a5577c9a7
