@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst setup test
+DEPEND=caps? ( sys-libs/libcap ) kerberos? ( virtual/krb5 ) ldap? ( net-nds/openldap ) lucene? ( >=dev-cpp/clucene-2.3 ) mysql? ( virtual/mysql ) pam? ( virtual/pam ) postgres? ( dev-db/postgresql-base !dev-db/postgresql-base[ldap,threads] ) selinux? ( sec-policy/selinux-dovecot ) sqlite? ( dev-db/sqlite ) ssl? ( dev-libs/openssl ) tcpd? ( sys-apps/tcp-wrappers ) vpopmail? ( net-mail/vpopmail ) virtual/libiconv ssl? ( dev-libs/openssl ) virtual/pkgconfig
+DESCRIPTION=An IMAP and POP3 server written with security primarily in mind
+EAPI=5
+HOMEPAGE=http://www.dovecot.org/
+IUSE=kerberos ldap mysql pam postgres sqlite vpopmail cydir imapc +maildir mbox mdbox pop3c sdbox bzip2 caps doc ipv6 lucene managesieve selinux sieve +ssl static-libs suid tcpd zlib ssl
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=LGPL-2.1 MIT
+RDEPEND=caps? ( sys-libs/libcap ) kerberos? ( virtual/krb5 ) ldap? ( net-nds/openldap ) lucene? ( >=dev-cpp/clucene-2.3 ) mysql? ( virtual/mysql ) pam? ( virtual/pam ) postgres? ( dev-db/postgresql-base !dev-db/postgresql-base[ldap,threads] ) selinux? ( sec-policy/selinux-dovecot ) sqlite? ( dev-db/sqlite ) ssl? ( dev-libs/openssl ) tcpd? ( sys-apps/tcp-wrappers ) vpopmail? ( net-mail/vpopmail ) virtual/libiconv net-mail/mailbase
+SLOT=0
+SRC_URI=http://dovecot.org/releases/2.2/dovecot-2.2.2.tar.gz sieve? ( http://www.rename-it.nl/dovecot/2.2/dovecot-2.2-pigeonhole-0.4.0.tar.gz ) managesieve? ( http://www.rename-it.nl/dovecot/2.2/dovecot-2.2-pigeonhole-0.4.0.tar.gz )
+_eclasses_=eutils	b8fdb86895c268cca7ae1626264a30f4	multilib	892e597faee02a5b94eb02ab512e7622	ssl-cert	0b45da48a22fda62c57c1809b8b55315	systemd	3421a5715404244e4827acd1cf8ce654	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=9274065ed8b3a02dc18e112a12b2e6a7
