@@ -3,6 +3,6 @@ AUX nagvis-1.6.6-global-definitions.patch 1177 SHA256 dbfa2b300ffdf5fb3b8f48b7b5
 DIST nagvis-1.4.4.tar.gz 743628 SHA256 1b0ec2364dabd0f20786b1286149855ca4d70dc557ae3492090911bcb2c1f075 SHA512 9faa6f63149b4446be9d959064326efab6251003a0a5424b8d8e6969bc434d3fe2a6048a47bc3c30504ddb53e447a0e1e426e6896bb32ec5cdd74933f7829048 WHIRLPOOL 2f4a8cfb1fdb63040782c8f9928128a4593fc53a0d838678898893ebb93a28dfca2464358daa0b55c24f8c565e00d11ec0d779fd79d1da61ea98a04629c62296
 DIST nagvis-1.6.6.tar.gz 3430714 SHA256 8aefe17ea7f43839fd5db4063fbac96eeedddbdcdf3789f4a75e9ca51c2833a8 SHA512 e5858b185dd5d31fc8d414df5b3464941769249ce582b10e155e89ba7aa0c45724550c44de9d7bfb23b96caa737e519f320e45050126feb94593cca2bfc583cb WHIRLPOOL 8af9d6c86ec84cc3630d0d93cd6cc55d2687a8b55f0f3b6eb2cadf946580af3a314daae9d5055ca41fd62f27fe06e188c9c319b42bd9118a1a6976815f2e18ad
 EBUILD nagvis-1.4.4-r1.ebuild 1441 SHA256 b31843da7879876a7981a30c7f1472a4d0507ef88d82fea193b37a6c88914e0e SHA512 dce09199738b32245617c941b0adc8d4aa061a66c1da7ce9d0ce0758d609ffbee61ad7c33d178e46870ae2a907eb21ee726d29d72b8878fb962fb4b05697a99d WHIRLPOOL c37288b931b2efe4f483d7ef4f31d091966f200dfc28a1f6c21e2cc6b03b22e881b7ea5d06407e4e861b1946af5f3f0e7eb65972c908e2c4f756767bca1a0e71
-EBUILD nagvis-1.6.6.ebuild 3007 SHA256 15b4fd12dea7dd35aa7079142d3c0a3e36d5506152d1d5d8b32a6c0eeb996d14 SHA512 cdf741b8df31204581b2fdc4633ba784e57cdb52846c649b92f428cc5afce8d16591256e03219f609ee6a8c9a4e09cff0743678e1761cd49d91e92efbef254db WHIRLPOOL cb87b506ba1e131630e73d9de6901b9027e0b854d3b732f864a4b009a43910be5814264cff70181f1c3a54597412684ba16c79508c121abaa6bcdebdb5e68975
-MISC ChangeLog 2007 SHA256 8d98617876609d179ad25a02d94aa88b14958a304144bb0b33deb3081375fd83 SHA512 2d9242ceeb5ca4f15d190d0cf62ccd920162d176dcd6e8eb11d723f0f4230463ac3a87b4a3bbc27a55ec562d27aa7a22bc982caeb6d92f74f667c07f29cc75d8 WHIRLPOOL be893951ac4fbd2c0fdbbbdaa29d66a4bcc2194d41ef8491be58917c9afc11006c085010f270123a8c5582bff25f59af0b1e7309a2ca38dc001d5e75766ba674
+EBUILD nagvis-1.6.6.ebuild 3010 SHA256 124ab5750afd6c28283bf55a8b2f6507f97ffe61e1e4e63e36d77d3f03250c88 SHA512 35017e7cc2faeacdc172decae4f43d4f69eb6aa5fafff735d714277be161dcfc1cf7512332e2263cebfd7a977b2a587375a36e88fc382496de4d8a940b15d88b WHIRLPOOL 1d2d9c6e1d5ff565a903c920745b71f204365e742012d4aadcab82fdbeb810ee4ea9be36bd0e43cd0ef7a71d2b0c991ec5a0dcb42e65066064d295540465e71e
+MISC ChangeLog 2133 SHA256 5536f9e6fdffd7226450ad83e8d289e102687c127dc8708e83e2e4569920b309 SHA512 86da65e14bba53257e59c32d54adb9a887e34ab072845a86314ba0ad40a0bad37f46f244dce2b47729e2f4d9ea9e55a27bf9f5e8deda78f3e7e5cfcbd183a8ad WHIRLPOOL 167dc5666c10cd606b70b3a23035d788fef25f3fe5a42589d94904cb4c60df5da19ce6c3f31e913e619886c53a5ba453c01dafdb7531a80b2eda5be8c113ecb3
 MISC metadata.xml 323 SHA256 e7fc500cdfc65373ff0de49202a6a4cc48e1bd8ae22fb8d5a8468831b44c1825 SHA512 aa45136f2dea70c1b996eb11c249d50072ce2d0638cb26e0d4422b0c7497480587dabe341b64bbc32a3ec8c0bba982216768eaf541fb25d942f65b4afada29f8 WHIRLPOOL 20f712e47100792fd7c56bae4f95054bdba84abb8e46e36b0040dd953a2743a1c819473c28208598a1b39ed8499c29c201bbbec6d0819721ee4b2c58e2e44584
