@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX dovecot-2.1.9_managesieve_gold.patch 1938 SHA256 e81efbc39b710d010a407a0f9863f3a41801bee6c4423a9c36c09c87e906cdae SHA512 17152599dda9a2d34f6a1e6a885dc0887db503d701e00d875878dfb594f3778f99e5194e98cf74c999c643b7faab314f224b9023f7e0cb038fbc25c1488aa216 WHIRLPOOL 2b125645dbd7a108c6646cf22aabb4d9695b4d7d156c7afafefffbb299ad7625aa7cf6119df81da28725f87e757da295bed8eb79e0c53ce86558ffbc8a4f3a2a
 AUX dovecot.init-r3 1609 SHA256 b4fb8ffb9aa7fd270d45512a657dcb5597ae5fe516b1f8e0078aa1892de8ecaa SHA512 957801c0e65153b0e0f394de8e6f6e66ae56427d64823e9937deaf98fda18ce82b2da6c4a0f42a2a46f8492923cf079b41c437b6b3558eeec0a81faa61c3c761 WHIRLPOOL 552a8333f7093727c6e67cce28abf730bb1bf3ed676895797e617308d1da133fd88636e34e080bebe81d8cadce2b9f0aa99f9e6d49ff2d69f7014a5fc6c3a499
@@ -14,27 +14,29 @@ DIST dovecot-2.1.16.tar.gz 3866802 SHA256 a61d5fa774615849f6e754232c41a7a87dd0de
 DIST dovecot-2.1.9.tar.gz 3829755 SHA256 77d11112bced9e2bbb1410ce5e6464af477775315ec67c7f3ab4d0da64e3c512 SHA512 da16bce6fdb535dd8eb48b4626444296e78808613f5a0d3d28dd7a509a82a276ee4f34d3ed8c339a98bd6aaee10ddf1c2df62060748b4c603a06ab165086d8de WHIRLPOOL f5bfe022687f36fcb06aa46165d6ffe8323bd13e990b7acecaed6af91226c5b06bc1e479f242dd6f963ff6039f633d790221559af42c4debf39ca252715a81f3
 DIST dovecot-2.2-pigeonhole-0.4.0.tar.gz 1144018 SHA256 e630d0c73e9c60028c5d25780eb38eda556ca7a5983cc07b7c0ac8490c4a7fa5 SHA512 d26977d9cd6685a29050f44b3754e8453c54449d3f5b7cc255bbc98c46c62571e3fb16d3362c646345c6c63600f4ecd38e05b59d159e55123ef81ac21d23b7f2 WHIRLPOOL a74841a45862666b6c71de8fa91668fa7c8d2755142982850da99a02ff79a7dce77c0d5f7c6982702460c2bd8aaf757279e508ef8a08238168f7e6e4936bc9e6
 DIST dovecot-2.2.1.tar.gz 4258863 SHA256 50af4c6d6d20f97b4d9b1559266d79be03da9930d20885ec5fbe4daf5afa2545 SHA512 e91da79a705873132190af7aef3db11d79c613b03a67b2ec28d2f95c2763e0fe0b3767addf604704bcb446794eb0915b28b525692b66306696fc5c6f175eeac8 WHIRLPOOL b1f1bd69c885c6da36bac53d9c4fdb4d9145a7f0f749fea4486e467a66b8d8d9eac13300fb1c8b3f6af314d142d808904ea938981cb1fb3c3726b6a3a625f9ec
+DIST dovecot-2.2.2.tar.gz 4282339 SHA256 30c98e8f9e40d7397d451a8679359b70031702f205aefbff1a6e27656fb63b9a SHA512 622dbb41044c45d45cfcacdf10cc4d83c29311730b62091591251d871c7ae99dba64bfda5bd7e10d6862a3d30eab492a75d208f30f5a80fefc8db471bb9caae1 WHIRLPOOL 075b9b8b8bce9e5ad010d293a7346db3d1e4b4c2663288936fee04ee556694e2fccbad4f7f1466a5b9f8f9c04b4833c6d33c9a13b8330ed798747b2c5856fd09
 EBUILD dovecot-2.0.19.ebuild 8872 SHA256 672190f8898d8587dad95872745bb65af195a77e2894527091e9032d4259a366 SHA512 52ef08b376d6bf6a443e9c4aea0db3b6a1a80e3cc0a899558e6dbdac6f36fbee5a1a84eb96f1d396a114ec74bafcb8ffada4a64a05a976fdbdc88c800dd0ccc3 WHIRLPOOL d4debf95e6404d908ccfbc1b01315902f77364c998488e1edd13b4a1008c308a3ba51479d228df4969e00efc29bab849216453d847d602f058674fb742aae6a2
 EBUILD dovecot-2.1.15.ebuild 8487 SHA256 93da1e5635449886882835c47e75614e539ee1bab86bb2fcb5a71f77a51fc132 SHA512 ea3f45e424cd1aed63691d643d79f30b1d306d1c78583420ffce4eb209e8b9e82b6c6e8291935d9f8ce49eb9fa96deeabfb985f23877993eb659e0e84e44a371 WHIRLPOOL f3a8f3ae06c8d34c1e14839010114f23cdc8ce4b6cc3b092488a7250a5770c8ffc009c100571fba0f44f970474c241df31b5dcdd99c20d86c44b86ead817204f
 EBUILD dovecot-2.1.16.ebuild 8565 SHA256 37437a9b4fd121ea5dac29232d4d173fd29329cfb6123c1564755c045b610f89 SHA512 5e1fee9097cf81d1ec2887f9eed2e9c9ae1b1959936f6cd22c4d888d6814a07b4931eb6cf385e0d89349c94d3a08f9da6c96a73ad0bf2be6cf0e1a475f814661 WHIRLPOOL 5a782e89b45f1bb6cf83d8313e4f48c4dd8609ccb3b5b22eef913d2d6fc7ed48239b9f035ae9ac375432875e1362a060c3486d07a3f9fbf2e677e1ab557a451f
 EBUILD dovecot-2.1.9.ebuild 8711 SHA256 7d1dcd87630cd6ea0692aeb1b3e5a323692935948634610fac6ecadc6a0c4e2b SHA512 15d6ec32508190d166eeeb5ba195e9228d58da7834cc0f670f68d43357b8dd8c3b82fbab909ea7d232ca0d8676820af4946d66acefc836526d598f61d249df33 WHIRLPOOL 73ce697ed35a319b87e2e9b4bc6286c848a847b0c72c14cc18f31e381d3815952567ef02b4c23fe280e473983ebbf078101539234ccc532810a5f73c601a5d36
 EBUILD dovecot-2.2.1.ebuild 8563 SHA256 02723b5a19724ee045a2d0d5a06a6945038264d2b803f78620bce0c5b3c48844 SHA512 b818766975eec2aaf2e020b468e244a1a8fd0ef4d22bd0721de348ba746abf11b7d46692dbe89db4e2d2bf6b1db77422865104496394a7d6d0bece432d30a07e WHIRLPOOL acd698a70ad0c4369c853fa24e5f4a8d8e1c67ce94449ba7245851b1f4154b2b8cb53da70b4efcb533701394aea89af0d488fd219528ab734616c8965af8cff7
-MISC ChangeLog 63410 SHA256 8723537578255a6d814427c410c2472440d2041e66aa28982f6952a8123cb55f SHA512 ea029e6dc01aaac9053f13642cc69a84f1a058356807d8811fcfaa9341f61d920faf17d263ff2ce90209abdd2e562f74ad0359745bfb2a287c25832c95d6c12f WHIRLPOOL 6619f0f32e20c528e537b6184544c4d2f6f6437e2b313d4ec772444b021dd9a3dfd137f57d0b4cc16b83c0a35b44f2c63a5c9725e236c97ff4f1582899127ac9
+EBUILD dovecot-2.2.2.ebuild 8563 SHA256 8cc32dd996b9aae9ab5d00f0d78b879ba536a60524627dd6f22c559e49b7fb93 SHA512 078f3ff658d39c4c26680c14b6efd71538d81f301b4e4e6cd40d5ddedf25f3d15aed83cd1e2b2fcac56d487e40f1f3545d9e6b04764025304f000f512650942b WHIRLPOOL 354963c06d1f9b13ddf8fa456bc015cc456e321bed6e036f2a1e8fdec8b51531c3877bc5944acfe0252c82a8c0cb09e7aa226262626a43ca7ae5d046ee22f16f
+MISC ChangeLog 63524 SHA256 b50e9e79af6e26507d9c8604a842a81c8ac1f4520720d4360301d5a00ffbc557 SHA512 5f3092054ae0abee4a4f49f86688b0a526bbc4d774e9e7a152c64c568279de333243af305295268689f0beee138f80b36018df66ff2782f638fd554925a84ffc WHIRLPOOL e9fa871c691d3f98bbbe1ec3f182dc8754609f4c0756c6366918cbadc56beb716d910097ea2bf585328708e91bb37ac81afeb0fa77676008ff06ad35507fc05d
 MISC metadata.xml 879 SHA256 40171ddac84b6d47c050e61ec8158085dc11c1da24c3c85b0375632868da55f6 SHA512 0f0dbfc71c087fd1c6f0b673ff83b837ea8e203f74cdbd159dd66943fbccb39fdd30bc38ba19b74403a369110c205218e397dec35db72ae53bd1431bfa61b702 WHIRLPOOL 25c2f71d1e7f8987155b7c7fa08f45ff2e1f647bb390ef19e4f84dbb319ede24bf1bbce9482a823e487eab08948368b74898f57ca182f8904c501a7bc4f70755
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRmKZHAAoJELp701BxlEWfaxkP/2phkrswqXSvldt3/227eTz5
-bt45Y9h4r2hJ5OPPvGxlMNcLRs5voFfLA8yGgosRuIWNHhS9w9qUNnaofS1iQXwK
-IndCNAXGLBvAXE/8oRYDkVZ2gzRGl8JBfldn3Uy/17AM3I3xF1hUS0EB6Mx+b+93
-DJFjHFYTp0q4P44UE+9H3IueUzj3dXEn31Qddu+VjRNmVXAKWI0uUBIJq9K9/eNd
-/Nf7kxfX7eDWgGbG34TsrUmdXF5WZLouutYfpAlWhdNZ3geIVQtilzGH/ieWCjjG
-h9xZVE9Z5goIKOOUe2TBst0dNHWSMaf4k0AnO/1Px8q063wCzfToEDNFGjfvIJv3
-1dmUeIvu66RTn5HoZaFwysWmWaH6u1TSStvWbvxLIIqjs4yfdXeU3mw3EafrfNhA
-T7+22aoX8cf6rlFoHDC4yDx6IqqhrIeVksQUL5XAjZIY4BRdTK3ymGlk6H9ZTfua
-70etuGmN2J1e0tTo0b3CE8KuizQl/DhVpuwZr5VXy8hX+GMa5hNx3GH2+JVopVbP
-e6lOMuMCxolggVkdM4gP53Y4P+8cZMRguHkQRo6HLTVrSlmi1EsxsOWp18TomuzK
-iNMrrkGdyWVICShsNfHvHraSxMtbDdXTAz3ZicYfyDhq208Friqs412XbyK94mxW
-PtdxrHV815/QasrFR0+N
-=35Y2
+iQIcBAEBCAAGBQJRmblCAAoJEHfx8XVYajsfAPkQAIZxnI2cR1ttgj2sP7wtGuob
+xyRu4iSuFJaMeBQ9/Wnh1s4y6rLHSQqZdMrbUxZ+vAeTbzt6eHYq9g5kWvsZcGFM
+R+gm+86WiZWTtj4b9cik4Hl6eYjm6L1aEC6wx1MESc0TlAIBb1JnfHZWVdX9xzxi
+F8Ze9a93non1wDpCP1mjKXGfqccfWdIKQz5OCahWCdWrMyEZSZUYPDC0GZv2uILN
+LzOyfEcRIGpG5Hzxd1HMxiRdeiikA+jf7Ic8oqtN+fMAG1ecgwretndmHj7D+qtF
+/DhoRG1/fno8cUE23hKt6u5gVty9b/cbx5kZQ6FGfEaWBSwfC4KLXoGnfEv3mknJ
+cMPkk3Q0XR+0sGa9bH8MyS8I1rHi4IHFp0lT+8LfwMvA442wePvTPoeYHLOUoDZF
+vridJ5rd8EI/Blb+x5f2T7Pc0GsixG/Yj0WULCJjZUs2GQZ4B1Q3i49hJfclboY3
+L+yt0hz5HO5zVOJjfflGmp2IgM3M3NcykJA2/yFVp+ZQ5F/57MpNEwCVIBMEdaqd
+YsuxHBNJvHckYmkXp6OVqJ/7jLvk01pc+F7uYwlGTbZKt01kPecNSG/6yHQqaq0k
++iKUCVbNGUK9AZvrqJbb4B3S2EFi3GDth/LFxSHUkFHEy3rfVzXNLmsCBp1fWAaf
+pnnNZZpbUqaSULZzlfoY
+=QSly
 -----END PGP SIGNATURE-----
