@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.422 2013/05/19 10:15:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.423 2013/05/20 05:48:36 eras Exp $
+
+*dovecot-2.2.2 (20 May 2013)
+
+  20 May 2013; Eray Aslan <eras@gentoo.org> +dovecot-2.2.2.ebuild:
+  Version bump
 
   19 May 2013; Agostino Sarubbo <ago@gentoo.org> dovecot-2.1.16.ebuild:
   Stable for amd64, wrt bug #470196
